--- a/src/Styles/Create.css
+++ b/src/Styles/Create.css
@@ -1,14 +1,46 @@
 .Create {
   height: 100vh;
-
+  display: flex;
+  flex-direction: row;
 }
 
 .param-space {
   background-color: #282c34;
-  height: 100vh;
+  /* height: 100vh; */
   color: white;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+@media screen and (max-width: 1024px) {
+  .param-space {
+    display: none !important;
+  }
 }
 
 .three-space {
-  height: 100vh;
+  /* height: 100vh; */
+  /* padding: 0;
+  margin: 0; */
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+
+}
+
+iframe {
+  /* display: flex;
+  flex-grow: 1;
+  flex-direction: column; */
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+.row {
+
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
 }
