--- a/src/Styles/Create.css
+++ b/src/Styles/Create.css
@@ -23,6 +23,7 @@
   /* height: 100vh; */
   /* padding: 0;
   margin: 0; */
+  padding: 0 !important;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
